// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`inline.mdx - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["mdx"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> or <LinkTo kind="Components/CompanyAvatar">\`CompanyAvatar\`</LinkTo> components.

123456789 123456789 123456789 123456789 123456789 123456789 123456789 123456789 <tag /> words words

A paragraph with a link [example](https://example.com) before a sufficiently long inline <Component attribute="value">component</Component> and more text.

A paragraph with **emphasis** before a sufficiently long inline <Component attribute="value">component</Component> and more text.

> You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

- You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

This paragraph has a component on a separate line already.

<Component attribute="value" />

=====================================output=====================================
You might be looking for the
ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo>
or <LinkTo kind="Components/CompanyAvatar">\`CompanyAvatar\`</LinkTo> components.

123456789 123456789 123456789 123456789 123456789 123456789 123456789
123456789 <tag /> words words

A paragraph with a link [example](https://example.com) before a sufficiently
long inline <Component attribute="value">component</Component> and more text.

A paragraph with **emphasis** before a sufficiently long
inline <Component attribute="value">component</Component> and more text.

> You might be looking for the
> ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo>
> component.

- You might be looking for the
  ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo>
  component.

This paragraph has a component on a separate line already.

<Component attribute="value" />

================================================================================
`;

exports[`inline.mdx - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["mdx"]
proseWrap: "never"
                                                      printWidth: 80 (default) |
=====================================input======================================
You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> or <LinkTo kind="Components/CompanyAvatar">\`CompanyAvatar\`</LinkTo> components.

123456789 123456789 123456789 123456789 123456789 123456789 123456789 123456789 <tag /> words words

A paragraph with a link [example](https://example.com) before a sufficiently long inline <Component attribute="value">component</Component> and more text.

A paragraph with **emphasis** before a sufficiently long inline <Component attribute="value">component</Component> and more text.

> You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

- You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

This paragraph has a component on a separate line already.

<Component attribute="value" />

=====================================output=====================================
You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> or <LinkTo kind="Components/CompanyAvatar">\`CompanyAvatar\`</LinkTo> components.

123456789 123456789 123456789 123456789 123456789 123456789 123456789 123456789 <tag /> words words

A paragraph with a link [example](https://example.com) before a sufficiently long inline <Component attribute="value">component</Component> and more text.

A paragraph with **emphasis** before a sufficiently long inline <Component attribute="value">component</Component> and more text.

> You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

- You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

This paragraph has a component on a separate line already.

<Component attribute="value" />

================================================================================
`;

exports[`inline.mdx - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["mdx"]
proseWrap: "preserve"
                                                      printWidth: 80 (default) |
=====================================input======================================
You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> or <LinkTo kind="Components/CompanyAvatar">\`CompanyAvatar\`</LinkTo> components.

123456789 123456789 123456789 123456789 123456789 123456789 123456789 123456789 <tag /> words words

A paragraph with a link [example](https://example.com) before a sufficiently long inline <Component attribute="value">component</Component> and more text.

A paragraph with **emphasis** before a sufficiently long inline <Component attribute="value">component</Component> and more text.

> You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

- You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

This paragraph has a component on a separate line already.

<Component attribute="value" />

=====================================output=====================================
You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> or <LinkTo kind="Components/CompanyAvatar">\`CompanyAvatar\`</LinkTo> components.

123456789 123456789 123456789 123456789 123456789 123456789 123456789 123456789 <tag /> words words

A paragraph with a link [example](https://example.com) before a sufficiently long inline <Component attribute="value">component</Component> and more text.

A paragraph with **emphasis** before a sufficiently long inline <Component attribute="value">component</Component> and more text.

> You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

- You might be looking for the ready-made <LinkTo kind="Components/UserAvatar">\`UserAvatar\`</LinkTo> component.

This paragraph has a component on a separate line already.

<Component attribute="value" />

================================================================================
`;
